--- a/templates/etc/systemd/system/data-container.service.erb
+++ b/templates/etc/systemd/system/data-container.service.erb
@@ -7,9 +7,8 @@ After=docker.service<% if @depends %><% @depends.each do |dep| %><%= " #{dep}.se
 Type=oneshot
 Restart=no
 SuccessExitStatus=1
-ExecStart=/usr/bin/docker run --entrypoint=/bin/true \
-    <% if @volumes_from  %><% @volumes_from.each do |container| %><%= " --volumes-from #{container}" %><% end %><% end %> \
-    --name <%= @title %> \
+ExecStart=/usr/bin/docker run \
+    <% @docker_run_options %> \
     <%= @image %>
 ExecStop=/usr/bin/docker stop <%= @title %>
 
