--- a/templates/etc/systemd/system/run-container.service.erb
+++ b/templates/etc/systemd/system/run-container.service.erb
@@ -7,8 +7,7 @@ After=docker.service<% if @depends %><% @depends.each do |dep| %><%= " docker-#{
 Type=simple
 Restart=always
 ExecStart=/usr/bin/docker run --rm \
-    <% if @volumes_from  %><% @volumes_from.each do |container| %><%= " --volumes-from #{container}" %><% end %><% end %> \
-    --name <%= @title %> \
+    <%= @docker_run_options %> \
     <%= @image %> <%= @command %>
 ExecStop=/usr/bin/docker stop <%= @title %>
 
