--- a/templates/etc/systemd/system/data-container.service.erb
+++ b/templates/etc/systemd/system/data-container.service.erb
@@ -8,7 +8,7 @@ Type=oneshot
 Restart=no
 SuccessExitStatus=1
 ExecStart=/usr/bin/docker run \
-    <% @docker_run_options %> \
+    <%= @docker_run_options %> \
     <%= @image %>
 ExecStop=/usr/bin/docker stop <%= @title %>
 
