Revise exec service description.

--- a/templates/etc/systemd/system/exec-container.service.erb
+++ b/templates/etc/systemd/system/exec-container.service.erb
@@ -1,11 +1,12 @@
 [Unit]
-Description=Docker Exec Container for <%= @title %>
+Description=Docker Exec for <%= @title %>
 Requires=docker.service
 After=docker.service <%= depends %>
 
 [Service]
 Type=oneshot
 Restart=no
+RemainAfterExit=yes
 ExecStart=/usr/bin/docker exec -i <%= @container %> <%= @command %>
 
 [Install]
