--- a/templates/etc/systemd/system/data-container.service.erb
+++ b/templates/etc/systemd/system/data-container.service.erb
@@ -1,13 +1,13 @@
 [Unit]
 Description=Docker Data Container for <%= @title %>
-Requires=docker.service
+Requires=docker.service<% if @depends %><% @depends.each do |dep| %><%= " #{dep}.service" %><% end %><% end %>
 After=docker.service<% if @depends %><% @depends.each do |dep| %><%= " #{dep}.service" %><% end %><% end %>
 
 [Service]
 Type=oneshot
 Restart=no
-SuccessExitStatus=1
-ExecStart=/usr/bin/docker run \
+RemainAfterExit=yes
+ExecStart=-/usr/bin/docker run \
     <%= @docker_run_options %> \
     <%= @image %>
 ExecStop=/usr/bin/docker stop <%= @title %>
