--- a/templates/etc/systemd/system/exec-container.service.erb
+++ b/templates/etc/systemd/system/exec-container.service.erb
@@ -1,11 +1,12 @@
 [Unit]
 Description=Docker Exec for <%= @title %>
-Requires=docker.service
+Requires=docker.service <%= @depends %>
 After=docker.service <%= @depends %>
 
 [Service]
 Type=oneshot
-Restart=no
+Restart=yes
+RestartSec=5
 RemainAfterExit=yes
 ExecStart=/usr/bin/docker exec -i <%= @container %> <%= @command %>
 
