feat(data_volume_container): add volume flag

--- a/templates/etc/systemd/system/data-container.service.erb
+++ b/templates/etc/systemd/system/data-container.service.erb
@@ -9,7 +9,7 @@ Restart=no
 RemainAfterExit=yes
 <% if @systemd_env_file %><%= "EnvironmentFile=#{@systemd_env_file}" %><% end %>
 <% if @pull_image %>ExecStartPre=/usr/bin/docker pull <%= @image %><% end %>
-ExecStart=-/usr/bin/docker run \
+ExecStart=-/usr/bin/docker create \
     <%= @docker_run_options %> \
     <%= @image %>
 ExecStop=/usr/bin/docker stop <%= @title %>
