--- a/templates/etc/systemd/system/data-container.service.erb
+++ b/templates/etc/systemd/system/data-container.service.erb
@@ -7,6 +7,7 @@ After=docker.service<% if @depends %><% @depends.each do |dep| %><%= " #{dep}.se
 Type=oneshot
 Restart=no
 RemainAfterExit=yes
+<% if @systemd_env_file %><%= "EnvironmentFile=#{systemd_env_file}" %><% end %>
 ExecStart=-/usr/bin/docker run \
     <%= @docker_run_options %> \
     <%= @image %>
