--- a/templates/etc/systemd/system/run-container.service.erb
+++ b/templates/etc/systemd/system/run-container.service.erb
@@ -7,6 +7,7 @@ After=docker.service<% if @depends %><% @depends.each do |dep| %><%= " docker-#{
 Type=simple
 Restart=always
 RestartSec=5
+<% if @systemd_env_file %><%= "EnvironmentFile=#{systemd_env_file}" %><% end %>
 ExecStartPre=-/usr/bin/docker stop <%= @title %>
 ExecStartPre=-/usr/bin/docker rm <%= @title %>
 ExecStart=/usr/bin/docker run --rm \
