--- a/templates/etc/systemd/system/exec-container.service.erb
+++ b/templates/etc/systemd/system/exec-container.service.erb
@@ -5,7 +5,7 @@ After=docker.service <%= @depends %>
 
 [Service]
 Type=oneshot
-Restart=yes
+Restart=on-failure
 RestartSec=5
 RemainAfterExit=yes
 ExecStart=/usr/bin/docker exec -i <%= @container %> <%= @command %>
