Fix variable name.

--- a/templates/etc/systemd/system/exec-container.service.erb
+++ b/templates/etc/systemd/system/exec-container.service.erb
@@ -8,7 +8,7 @@ Type=oneshot
 Restart=on-failure
 RestartSec=5
 RemainAfterExit=yes
-<% if @systemd_env_file %><%= "EnvironmentFile=#{systemd_env_file}" %><% end %>
+<% if @systemd_env_file %><%= "EnvironmentFile=#{@systemd_env_file}" %><% end %>
 ExecStart=/usr/bin/docker exec -i <%= @container %> <%= @command %>
 
 [Install]
